 
[B]Version 1.1.1  (28.02.2018)[/B]
 - fixed: Rubrik "Sender sortiert" Sender werden NICHT aufgelistet (leer)

[B]Version 1.1.2  (24.06.2018)[/B]
 - fixed: Alle angeklickten Ordner sind leer
 - fixed: Umstellung der Webseite von "TvSpielfilm" auf "https"
 - optimized: Unter den Rubriken "nach Tag" und "nach Sender" werden jetzt mehr Filminfos im Titel angezeigt
 - optimized: Wiedergabequalität-Aufbereitung von ZDF-Links (mp4) - neue Codes hinzugefügt
 - optimized: Script überarbeitet - unnötige Codeschnipsel entfernt
 - removed: Abhängigkeit "plugin.video.arte_tv" von @PUR3 (broken) zum Abspielen von ARTE-Links
 - added: Abhängigkeit als 2.ARTE-Addon "plugin.video.L0RE.arte" von @L0RE zum Abspielen von ARTE-Links
 - added: Addon kompatibel mit PYTHON-Vers.3 gemacht (für KODI-19 >) :-)

[B]Version 1.1.3 - 1.1.5  (02.07.2018)[/B]
 - fixed: KODI-18/Win/64bit~alpha3-Nightly macht stellenweise Probleme mit Umlauten + Sonderzeichen
 - fixed: Beim Abspielen von der Playliste wird NICHT immer der Titel der Sendung angezeigt
 - optimized: SprachFiles des Addons aufgestockt
 - fixed: Fehler in "kodinerds.repo" - alte Ordner+Dateien wurden NICHT gelöscht

[B]Version 1.1.6  (09.08.2018)[/B]
 - fixed: Alle ZDF-Videos werden NICHT abgespielt

[B]Version 1.1.7  (02.11.2018)[/B]
 - fixed: Alle ARD-Videos werden NICHT abgespielt (Webseitenstruktur verändert)
 - fixed: Alle ZDF-Videos werden NICHT abgespielt (Webseite verändert)

[B]Version 1.1.8  (21.12.2018)[/B]
 - fixed: Alle ab dem 19.12.2018 hinzugefügten ARD-Videos werden NICHT abgespielt (Webseite verändert)

[B]Version 1.1.9  (06.01.2019)[/B]
 - optimized: Manche ARD-Videos werden falsch weitergeleitet - Meldung integriert (Link in TvSpielfilm ist falsch)

[B]Version 1.2.0  (18.01.2019)[/B]
 - fixed: BUG? = Auf manchen Android-Systemen gibt es Probleme beim Speichern des Cookiefiles (ValueError: timestamp out of range for platform time_t)