@@ -81,3 +81,6 @@
 
 [B]Version 1.2.0  (18.01.2019)[/B]
  - fixed: BUG? = Auf manchen Android-Systemen gibt es Probleme beim Speichern des Cookiefiles (ValueError: timestamp out of range for platform time_t)
+
+[B]Version 1.2.1  (17.08.2019)[/B]
+ - fixed: in Rubrik = nach Datum, Highlights und nach Sender wird Webseitenquelltext angezeigt
